# routes/order.js
@@ -5,6 +5,7 @@ const {
   createOrder,
   getSingleOrder,
   getAllOrdersOfLoggedInUser,
+  adminGetAllOrders,
 } = require("../controllers/orderController");
 
 // Middleware
@@ -14,5 +15,10 @@ const { isLoggedIn, customRole } = require("../middlewares/user");
 router.route("/create").post(isLoggedIn, createOrder);
 router.route("/myOrder").get(isLoggedIn, getAllOrdersOfLoggedInUser);
 router.route("/:id").get(isLoggedIn, getSingleOrder);
+
+// Admin
+router
+  .route("/admin/orders")
+  .get(isLoggedIn, customRole("admin"), adminGetAllOrders);
 
 module.exports = router;
