# swagger.yaml
@@ -1360,7 +1360,7 @@ paths:
     get:
       tags:
         - Order
-      summary: Admin, will get list of all orders
+      summary: user, will get list of all orders that he created
       responses:
         200:
           description: success, list of all orders
@@ -1527,5 +1527,85 @@ paths:
           description: bad request
         404:
           description: Order not found
+        500:
+          description: internal server error
+
+  /order/admin/orders:
+    get:
+      tags:
+        - Order
+      summary: Admin can get all orders but new orders first
+      responses:
+        200:
+          description: success, list of all orders
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  totalOrders:
+                    type: number
+                  orders:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                        user:
+                          type: string
+                        shippingInfo:
+                          type: object
+                          properties:
+                            address:
+                              type: string
+                            phoneNumber:
+                              type: number
+                            city:
+                              type: string
+                            state:
+                              type: string
+                            country:
+                              type: string
+                            postalCode:
+                              type: number
+                        orderItems:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              _id:
+                                type: string
+                              productName:
+                                type: string
+                              quantity:
+                                type: number
+                              image:
+                                type: string
+                              price:
+                                type: string
+                              product:
+                                type: string
+                        paymentInfo:
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                        taxAmount:
+                          type: number
+                        shippingAmount:
+                          type: number
+                        totalAmount:
+                          type: number
+                        orderStatus:
+                          type: string
+                        createdAt:
+                          type: string
+                        __v:
+                          type: string
+        400:
+          description: bad request
         500:
           description: internal server error
